[gd_scene load_steps=4 format=3 uid="uid://c7j2k3l4m5n6o7p8"]

[ext_resource type="Script" path="res://scripts/upgrade_shop.gd" id="1_1"]
[ext_resource type="FontFile" uid="uid://boipgfyx6mikt" path="res://fonts/monogram-extended.ttf" id="2_1"]
[ext_resource type="Shader" path="res://shaders/crt_shader.gdshader" id="3_1"]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource("3_1")
shader_parameter/screen_curve = 6.0
shader_parameter/wobble_intensity = 0.0005
shader_parameter/glitch_intensity = 0.0
shader_parameter/scanline_intensity = 0.85
shader_parameter/scanline_count = 140.0
shader_parameter/scan_thickness = 10.0
shader_parameter/brightness = 1.1
shader_parameter/vignette_strength = 0.35
shader_parameter/chromatic_aberration = 0.001
shader_parameter/phosphor_strength = 0.2
shader_parameter/bloom_strength = 0.12
shader_parameter/pixel_distortion = 0.0

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="CRTLayer" type="CanvasLayer" parent="."]
layer = 101

[node name="CRTShader" type="ColorRect" parent="CRTLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
material = SubResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
mouse_filter = 2

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Content/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 64
text = "upgrade chamber"
horizontal_alignment = 1

[node name="FragmentsLabel" type="Label" parent="Content/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 32
text = "dream fragments: 0"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Content/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 24
text = "runs: 0 | highest wave: 1 | best combo: 0"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="FlowContainer" parent="Content/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
theme_override_constants/h_alignment = 1
theme_override_constants/v_alignment = 1
theme_override_constants/max_columns = 3

[node name="ContinueButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 32
text = "enter the dream"
